Finally got some models up and running. It's a mess though

--- a/nom-api/Nom.Api/appsettings.json
+++ b/nom-api/Nom.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "AuthConnection": "Replaceme"
+    "NomConnection": "Replaceme"
   },
   "Logging": {
     "LogLevel": {
