--- a/nom-api/Nom.Orch/Nom.Orch.csproj
+++ b/nom-api/Nom.Orch/Nom.Orch.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\Nom.Data\Nom.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.3.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
