--- a/nom-ui/angular.json
+++ b/nom-ui/angular.json
@@ -30,7 +30,8 @@
                 "input": "public"
               }
             ],
-            "styles": ["src/styles.scss"],
+            "styles": ["src/styles.scss", 
+            "node_modules/@fortawesome/fontawesome-free/css/all.css"],
             "scripts": []
           },
           "configurations": {
