--- a/nom-api/Nom.Orch/Nom.Orch.csproj
+++ b/nom-api/Nom.Orch/Nom.Orch.csproj
@@ -5,6 +5,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="33.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.3.0" />
   </ItemGroup>
 
