Move toward seeding the db with recipes, ingredients, and nutritional data.

--- a/nom-api/Nom.Api/appsettings.json
+++ b/nom-api/Nom.Api/appsettings.json
@@ -8,5 +8,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "FoodDataCentralApi": {
+    "BaseUrl": "https://api.nal.usda.gov/fdc/v1/",
+    "ApiKey": "replaceme"
+  }
 }
