Getting there with importing recipes

--- a/nom-api/Nom.Api/appsettings.json
+++ b/nom-api/Nom.Api/appsettings.json
@@ -10,7 +10,7 @@
   },
   "AllowedHosts": "*",
   "FoodDataCentralApi": {
-    "BaseUrl": "https://api.nal.usda.gov/fdc/v1/",
+    "BaseUrl": "https://api.nal.usda.gov",
     "ApiKey": "replaceme"
   }
 }
