--- a/nom-api/Nom.Orch/Nom.Orch.csproj
+++ b/nom-api/Nom.Orch/Nom.Orch.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="33.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SystemWebAdapters" Version="2.0.0" />
   </ItemGroup>
 
   <PropertyGroup>
